# futures-async-stream

./: .clippy.toml  .deny.toml  .external-types.toml  .git-blame-ignore-revs  .gitattributes  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bors.toml  compiletest.sh
.github/: bors.toml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
ci/: azure-compile-test.yml  azure-compiletest.yml  azure-test.yml  publish.sh
examples/: echo.rs
futures-async-stream-macro/: Cargo.toml  LICENSE-MIT
futures-async-stream-macro/src/: elision.rs  lib.rs  lifetime.rs  parse.rs  stream.rs  try_stream.rs  utils.rs  visitor.rs
scripts/: publish.sh
src/: lib.rs  main.rs  stream.rs  try_stream.rs
src/tests/: mod.rs
tests/: async_stream.rs  async_try_stream.rs  compile-test.rs  compiletest.rs  drop-order-for-async-fn-parameters-by-ref-binding.rs  drop-order-for-async-fn-parameters.rs  drop-order-for-locals-when-cancelled.rs  drop-order-when-cancelled.rs  elisions.rs  for_await.rs  lint.rs  no_stmt_expr_attributes.rs  no_stmt_expr_attributes_feature.rs  overwriting_core_crate.rs  stream.rs  try_stream.rs
tests/auxiliary/: mod.rs
tests/doc/: Cargo.toml
tests/include/: basic.rs
tests/no-std/: Cargo.toml  lib.rs
tests/no-std/src/: lib.rs
tests/ui/: bad-input.rs  bad-input.stderr  bad-item-type.rs  bad-item-type.stderr  bad-return-type.rs  bad-return-type.stderr  borrow-as-mut.rs  borrow-as-mut.stderr  def-site.rs  def-site.stderr  forget-semicolon.rs  forget-semicolon.stderr  invalid-argument.rs  invalid-argument.stderr  invalid-arguments.rs  invalid-arguments.stderr  invalid-function.rs  invalid-function.stderr  invalid.rs  invalid.stderr  missing-item.rs  missing-item.stderr  move-captured-variable.rs  move-captured-variable.stderr  nested.rs  nested.stderr  not-async.rs  not-async.stderr  question-mark-await-type-error.rs  question-mark-await-type-error.stderr  threads-safety.rs  threads-safety.stderr  threads-sendsync.rs  threads-sendsync.stderr  type-error.rs  type-error.stderr  unresolved-type.rs  unresolved-type.stderr
tools/: gen.sh  publish.sh
tools/ci/: publish.sh
tools/codegen/: Cargo.toml
tools/codegen/src/: file.rs  main.rs
