[package]
name = "futures-async-stream"
version = "0.2.5"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-async-stream"
documentation = "https://docs.rs/futures-async-stream"
keywords = ["async", "future", "futures", "stream", "macros"]
categories = ["asynchronous", "no-std", "rust-patterns"]
exclude = ["/.*", "/ci", "/tools"]
description = """
Async stream for Rust and the futures crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = ["futures-async-stream-macro", "tests/no-std"]

# Note: futures-core is public dependency.
[dependencies]
futures-async-stream-macro = { version = "=0.2.5", path = "futures-async-stream-macro", default-features = false }
futures-core = { version = "0.3", default-features = false }
pin-project = "1"

[dev-dependencies]
futures = { package = "futures-util", version = "0.3", default-features = false }
rustversion = "1"
static_assertions = "1"
trybuild = "1"
