[package]
name = "futures-async-stream"
version = "0.2.8"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-async-stream"
keywords = ["async", "future", "futures", "stream", "macros"]
categories = ["asynchronous", "no-std", "no-std::no-alloc", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
Async stream for Rust and the futures crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = [
    "futures_async_stream_macro::*",
]

[workspace]
resolver = "2"
members = ["futures-async-stream-macro", "tests/no-std", "tools/codegen"]

[lib]
doc-scrape-examples = false

# Note: futures-core is public dependency.
[dependencies]
futures-async-stream-macro = { version = "=0.2.8", path = "futures-async-stream-macro" }
futures-core = { version = "0.3", default-features = false }
pin-project = "1.0.11"

[dev-dependencies]
futures = { package = "futures-util", version = "0.3", default-features = false }
rustversion = "1"
static_assertions = "1"
trybuild = "1.0.49"
