[package]
name = "futures-async-stream-macro"
version = "0.2.5"
authors = ["Taiki Endo <te316e89@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-async-stream"
documentation = "https://docs.rs/futures-async-stream-macro"
keywords = ["async", "future", "futures", "stream", "macros"]
categories = ["asynchronous", "no-std"]
description = """
Implementation detail of the `futures-async-stream` crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.23", features = ["full", "visit-mut"] }
