[package]
name = "futures-async-stream-macro"
version = "0.2.7"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-async-stream"
keywords = ["async", "future", "futures", "stream", "macros"]
categories = ["asynchronous", "no-std", "rust-patterns"]
description = """
Implementation detail of the `futures-async-stream` crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2.0.23", features = ["full", "visit-mut"] }
