[package]
name = "futures-async-stream-macro"
version = "0.2.10" #publish:version
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/futures-async-stream"
keywords = ["async", "future", "futures", "stream", "macros"]
categories = ["asynchronous", "no-std", "no-std::no-alloc", "rust-patterns"]
description = """
Implementation detail of the `futures-async-stream` crate.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1.0.25"
syn = { version = "2.0.1", features = ["full", "visit-mut"] }

[dev-dependencies]

[lints]
workspace = true
