[package]
name = "futures-async-stream-internal-codegen"
edition = "2021"

[dependencies]
anyhow = "1"
fs-err = "2"
globset = { version = "0.4", default-features = false }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing", "clone-impls", "full", "visit-mut"] }

[lints]
workspace = true
